--- a/css/custom.css
+++ b/css/custom.css
@@ -260,7 +260,7 @@
 /* First Slide */
 .demo-1 .bg-1 .sl-slide-inner,
 .demo-1 .bg-1 .sl-content-slice {
-	background: #fff;
+	background: #ff0000;
 	background-image: url(../images/tu-tak-1.jpeg);
 	background-size: cover; /* 背景图像自适应 */
 	background-position: center; /* 图像居中显示 */
